mautic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mautic
  name: mautic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic
  strategy: {}
  template:
    metadata:
      labels:
        app: mautic
    spec:
      volumes:
        - name: mautic-pvc
          persistentVolumeClaim:
            claimName: nfs-app-pvc
        - name: phpini
          configMap:
            name: phpini
      containers:
      - image: skippednote/mautic4
        name: mautic
        volumeMounts:
          - name: mautic-pvc
            mountPath: /var/www/html
          - name: phpini
            mountPath: /usr/local/etc/php/conf.custom
        ports:
          - containerPort: 80
