svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mysql
  name: mysql
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    run: mysql
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mautic
  name: mautic
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mautic
status:
  loadBalancer: {}
