ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: mautic-issuer
  creationTimestamp: null
  name: mautic
spec:
  rules:
    - host: '*.skippednote.dev'
      http:
        paths:
          - backend:
              service:
                name: mautic
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - '*.skippednote.dev'
      secretName: digitalocean-dns
status:
  loadBalancer: {}
